--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
   border-radius: 50%;
   text-align: center;
   font-size: 1.3rem;
-  position: absolute;
+  position: fixed;
   background: #fcfffd;
   z-index: 20;
   bottom: 4rem;
@@ -75,7 +75,7 @@ body {
 
   min-width: 5rem;
   border-radius: 5px;
-  max-height: 15rem;
+  min-height: 5rem;
   /* min-width: 14rem;
   max-width: 15rem; */
   overflow: hidden;
@@ -103,11 +103,6 @@ body {
   justify-content: space-between;
   /* height: 100%; */
   min-height: 100%;
-  /* grid-template-rows: 80% 20%; */
-
-  /* text-overflow: ellipsis; */
-
-  /* overflow-wrap: break-word; */
 }
 .text {
   /* max-height: 12rem;
@@ -191,6 +186,7 @@ body {
   width: 3px;
   background: transparent;
 }
+
 ::-webkit-scrollbar-thumb {
   background: rgb(208, 232, 243, 0.7);
 }
@@ -228,7 +224,7 @@ textarea:focus {
 
 .input-popup,
 .edit-popup {
-  position: absolute;
+  position: fixed;
   top: 35%;
   left: 25%;
   right: 25%;
@@ -276,19 +272,20 @@ textarea:focus {
 
 .action-text {
   /* display: inline-block; */
+  /* align-content: center; */
   text-align: center;
   font-family: "Quicksand", sans-serif;
-  position: absolute;
+  position: fixed;
   bottom: 5rem;
   color: black;
   background: white;
   font-weight: 600;
   padding: 0.7rem 1.2rem;
   border-radius: 20px;
-  left: 35%;
-  right: 35%;
-
+  transform: translateX(calc(100vw - 55vw));
+  max-width: 10rem;
   z-index: 50;
+  /* position: sticky; */
   /* padding: ; */
 }
 
