--- a/styles.css
+++ b/styles.css
@@ -73,12 +73,11 @@ body {
     #4357b7
   );
 
-  min-width: 5rem;
+  min-width: 8rem;
   border-radius: 5px;
   min-height: 5rem;
 
   overflow: hidden;
-
 }
 
 @media screen and (min-width: 900px) {
@@ -94,11 +93,10 @@ body {
   flex-direction: column;
 
   justify-content: space-between;
- 
+
   min-height: 100%;
 }
 .text {
- 
   max-width: 100%;
 
   text-align: start;
@@ -131,7 +129,8 @@ body {
   grid-template-rows: 1fr;
 
   text-align: center;
- 
+}
+
 .icons > :first-child {
   border-right: 1px solid rgb(0, 0, 0, 0.3);
 }
@@ -173,12 +172,10 @@ body {
   background: rgb(208, 232, 243, 0.7);
 }
 textarea {
-
   font-size: 1.3rem;
   padding: 0.5rem;
   min-width: 100%;
   min-height: 17rem;
-
 
   max-height: 17rem;
   border: none;
@@ -192,8 +189,6 @@ textarea {
     #d3b4fd,
     #dab6fc
   );
-
-
 }
 textarea:focus {
   border: none;
@@ -215,7 +210,6 @@ textarea:focus {
 }
 
 .save {
-  
   border-left: 2px solid rgba(0, 0, 0, 0.3);
 }
 
@@ -247,7 +241,6 @@ textarea:focus {
 }
 
 .action-text {
-  
   text-align: center;
   font-family: "Quicksand", sans-serif;
   position: fixed;
@@ -260,6 +253,4 @@ textarea:focus {
   transform: translateX(calc(100vw - 55vw));
   max-width: 10rem;
   z-index: 50;
- 
 }
-
