removed stored note edit option

--- a/styles.css
+++ b/styles.css
@@ -243,3 +243,8 @@ textarea:focus {
   max-width: 10rem;
   z-index: 50;
 }
+.linecut {
+  text-decoration: line-through;
+  color: black;
+  cursor: pointer;
+}
